Fix the real problem behind the date issue..

--- a/css/style.less
+++ b/css/style.less
@@ -174,9 +174,7 @@ body {
 
   .date {
     padding-left: 20px;
-    padding-bottom: 7px;
     font-style: italic;
-    line-height: 13px;
   }
 
   .no-decoration a {
@@ -1340,6 +1338,7 @@ body {
     .search-submit {
       height: 28px;
       width: 28px;
+      z-index: 9999;
     }
   }
 
